--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.1",
     "gulp-cssmin": "^0.1.6",
+    "gulp-file-include": "^1.0.0",
     "gulp-filter": "^1.0.2",
     "gulp-imagemin": "^2.0.0",
     "gulp-inject": "^1.0.2",
