--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,14 @@
   "private": true,
   "dependencies": {
     "font-awesome": "~4.2.0",
-    "bootstrap": "~3.3.0"
+    "bootstrap": "~3.3.0",
+    "slick-carousel": "^1.6.0"
   },
   "overrides": {
     "bootstrap": {
       "main": [
-        "dist/fonts/**", "dist/js/bootstrap.min.js"
+        "dist/fonts/**",
+        "dist/js/bootstrap.min.js"
       ]
     }
   }
