--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "font-awesome": "~4.2.0",
     "bootstrap": "~3.3.0",
-    "slick-carousel": "^1.6.0"
+    "slick-carousel": "^1.6.0",
+    "handlebars": "4.7.2"
   },
   "overrides": {
     "bootstrap": {
